--- a/src/pages/create-oauth.ejs
+++ b/src/pages/create-oauth.ejs
@@ -6,6 +6,7 @@
     <title>Create OAuth Application</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+    <link rel="stylesheet" href="/css/oauth.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
