removed oauth scopes

--- a/src/pages/modify-oauth.ejs
+++ b/src/pages/modify-oauth.ejs
@@ -52,7 +52,7 @@
                 <p class="muted redirect-help">One redirect URI per line. Users will be redirected here after authorization.</p>
             </div>
             
-            <div class="field">
+            <div class="field" style="display: none;">
                 <label>Scopes</label>
                 <div class="permission-editor">
                     <div class="chips" id="scopeChips" aria-live="polite"></div>
