--- a/src/pages/create-oauth.ejs
+++ b/src/pages/create-oauth.ejs
@@ -32,7 +32,7 @@
                 <p class="muted" style="font-size:.65rem; margin:.4rem 0 0;">One redirect URI per line. Users will be redirected here after authorization.</p>
             </div>
             
-            <div class="field">
+            <div class="field" style="display: none;">
                 <label>Scopes</label>
                 <div class="permission-editor">
                     <div class="chips" id="scopeChips" aria-live="polite"></div>
